--- a/assessments.html
+++ b/assessments.html
@@ -116,6 +116,7 @@ const { data: levels } = await supabase
   .from("achievement_levels")
   .select("id, label")
   .order("order_index", { ascending: true });
+
 // Load competencies and populate top core competencies
 const { data: competencies } = await supabase.from("competencies").select("id, name, subject_id").or("is_active.is.null,is_active.eq.true").order("name");
 const coreContainer = document.getElementById("coreCompetenciesContainer");
@@ -150,11 +151,9 @@ else tbody.innerHTML = students.map(s => `
   </td>
 </tr>`).join("");
 
-// Load strands and sub-strands from DB
+// Load strands and sub-strands
 const strandSelect = document.getElementById("strandSelect");
-
-
-// Load strands for the selected subject
+const sleSelect = document.getElementById("sleSelect");
 const { data: strands } = await supabase.from("strands")
   .select("id, name")
   .eq("subject_id", subjectId)
@@ -162,7 +161,6 @@ const { data: strands } = await supabase.from("strands")
   .order("name");
 
 strands.forEach(s => strandSelect.innerHTML += `<option value="${s.id}">${s.name}</option>`);
-
 
 strandSelect.onchange = async () => {
   const strandId = strandSelect.value;
@@ -175,24 +173,19 @@ strandSelect.onchange = async () => {
   sles.forEach(sle => sleSelect.innerHTML += `<option value="${sle.id}">${sle.name}</option>`);
 };
 
-// Save assessment
+// --------------------
+// Save Assessment with FULL update
+// --------------------
 document.getElementById("saveAssessment").onclick = async () => {
-  // Get selected values
   const strand = strandSelect.value;
-  const substrand = substrandSelect.value || null;
+  const sleId = sleSelect.value || null;
   const termId = document.getElementById("termSelect").value;
   const termName = document.getElementById("termSelect").selectedOptions[0]?.text;
   const assessmentTypeId = document.getElementById("assessmentTypeSelect").value;
-
-  const selectedCoreCompetencies = Array.from(document.querySelectorAll(".coreCompetency:checked"))
-                                        .map(cb => cb.value);
+  const selectedCoreCompetencies = Array.from(document.querySelectorAll(".coreCompetency:checked")).map(cb => cb.value);
   const subjectCompetency = document.getElementById("subjectCompetency").value;
 
-  // --------------------
-  // 2️⃣ & 3️⃣ CBC-compliant validation BEFORE inserting results
-  // --------------------
-
-  // Step 2: Validate required selections
+  // Validate selections
   if (!termId || !assessmentTypeId || !strand) {
     alert("Please select Term, Assessment Type, and Strand before saving.");
     return;
@@ -202,52 +195,38 @@ document.getElementById("saveAssessment").onclick = async () => {
     return;
   }
 
+  // Check per-student levels
   const studentRows = document.querySelectorAll("#studentsBody tr");
-let missingLevel = false;
+  let missingLevel = false;
+  studentRows.forEach(row => {
+    const levelSelect = row.querySelector(".performanceLevel");
+    if (!levelSelect) return;
+    if (!levelSelect.value) { missingLevel = true; row.style.backgroundColor = "rgba(255,0,0,0.2)"; }
+    levelSelect.onchange = () => row.style.backgroundColor = "";
+  });
+  if (missingLevel) { alert("Some students missing a Performance Level. Highlighted in red."); return; }
 
-for (let row of studentRows) {
-  const levelSelect = row.querySelector(".performanceLevel");
-  if (!levelSelect) continue; // Skip placeholder rows
-  const level = levelSelect.value;
-
-  // Reset previous highlighting
-  row.style.backgroundColor = "";
-
- if (!level) {
-    missingLevel = true;
-    row.style.backgroundColor = "rgba(255,0,0,0.2)"; // Highlight the row in light red
-  }
-
-  // Remove highlight when a level is selected
-  levelSelect.onchange = () => row.style.backgroundColor = "";
-}
-
-if (missingLevel) {
-  alert("Some students are missing a Performance Level. Highlighted in red. Please complete before saving.");
-  return; // Stop saving until teacher corrects
-}
-  
-
-  // --------------------
-  // Get logged-in user
-  // --------------------
+  // Logged-in user
   const { data: { user } } = await supabase.auth.getUser();
   if (!user) { window.location.href="index.html"; return; }
-
-  const { data: profile } = await supabase.from("profiles")
-                                         .select("school_id")
-                                         .eq("auth_id", user.id)
-                                         .single();
-  if (!profile?.school_id) { alert("Cannot determine school_id"); return; }
-  const schoolId = profile.school_id;
+  const { data: profile } = await supabase.from("profiles").select("school_id").eq("auth_id", user.id).single();
+  const schoolId = profile?.school_id;
 
   const today = new Date().toISOString();
   const assessmentTitle = `${subjectData.name} - ${termName} (${academicYear})`;
 
-  // --------------------
-  // Insert assessment
-  // --------------------
-  const { data: assessment, error: assessmentError } = await supabase.from("assessments").insert([{
+  // Fetch existing assessment
+  const { data: existingAssessment } = await supabase.from("assessments")
+    .select("*")
+    .eq("class_id", classId)
+    .eq("subject_id", subjectId)
+    .eq("term_id", termId)
+    .eq("assessment_type_id", assessmentTypeId)
+    .single();
+
+  // Upsert assessment
+  const { data: assessment, error: assessmentError } = await supabase.from("assessments").upsert([{
+    id: existingAssessment?.id,
     title: assessmentTitle,
     class_id: classId,
     subject_id: subjectId,
@@ -256,21 +235,18 @@ if (missingLevel) {
     term: termName,
     academic_year: academicYear,
     assessment_type_id: assessmentTypeId,
-    learning_area_id: subjectId,
-    assessment_date: today,
-    created_by: user.id,
     core_competencies: selectedCoreCompetencies,
-    subject_competencies: subjectCompetency
-  }]).select().single();
+    subject_competencies: subjectCompetency,
+    strand_id: strand,
+    learning_experience_id: sleId,
+    updated_at: today,
+    updated_by: user.id,
+    created_by: existingAssessment?.created_by || user.id
+  }], { onConflict: ["class_id", "subject_id", "term_id", "assessment_type_id"] }).select().single();
 
-  if (assessmentError) {
-    document.getElementById("status").innerText = `Error saving assessment: ${assessmentError.message}`;
-    return;
-  }
+  if (assessmentError) { document.getElementById("status").innerText = `Error saving assessment: ${assessmentError.message}`; return; }
 
-  // --------------------
-  // Insert per-student results
-  // --------------------
+  // Upsert per-student results
   const rows = Array.from(studentRows).map(tr => ({
     assessment_id: assessment.id,
     student_id: tr.dataset.id,
@@ -280,40 +256,18 @@ if (missingLevel) {
     achievement_level_id: tr.querySelector(".performanceLevel").value,
     academic_year: academicYear,
     teacher_id: user.id,
-    created_by: user.id
+    created_by: existingAssessment?.created_by || user.id,
+    updated_at: today,
+    updated_by: user.id
   }));
 
-  const { error: resultError } = await supabase.from("assessment_results").insert(rows);
-  if (resultError) {
-    document.getElementById("status").innerText = `Error saving results: ${resultError.message}`;
-    return;
-  }
+  const { error: resultError } = await supabase.from("assessment_results").upsert(rows, {
+    onConflict: ["assessment_id", "student_id", "term_id", "assessment_type_id"]
+  });
+  if (resultError) { document.getElementById("status").innerText = `Error saving results: ${resultError.message}`; return; }
 
-  // --------------------
-  // Insert strand & substrand
-  // --------------------
- const sleId = sleSelect.value || null;
-
-if (strand) {
-  const { error: sleError } = await supabase.from("assessment_strands").insert([{
-    assessment_id: assessment.id,
-    strand_id: strand,
-    learning_experience_id: sleId
-  }]);
-
-    if (strandError) {
-      document.getElementById("status").innerText = `Error saving strand: ${strandError.message}`;
-      return;
-    }
-  }
-
-  // ✅ Success
-  document.getElementById("status").innerText = "Assessment and results saved successfully!";
-  console.log("Selected term ID:", termId);
+  document.getElementById("status").innerText = "Assessment and results updated successfully!";
 };
-
-
-
 </script>
 </body>
 </html>
